# django_ninja_base

./: .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  README.md
api/: pyproject.toml
api/core/: settings.py  urls.py
api/interface/: account.py  auth.py  config.py  email.py  log.py  verify.py
api/module/account/: admin.py  const.py  models.py  service.py  sync_role_service.py  urls.py
api/module/account/management/commands/: account_random_command.py  account_seeding_users.py  account_sync_groups_pems.py
api/module/account/migrations/: 0001_initial.py  0002_rename_name_tenant_title.py
api/module/auth/: service.py  urls.py
api/module/config/: const.py  models.py  service.py
api/module/config/migrations/: 0001_initial.py
api/module/log/: const.py  models.py  service.py
api/module/log/migrations/: 0001_initial.py
api/module/verify/: const.py  models.py  service.py
api/module/verify/migrations/: 0001_initial.py
api/service/: email_service.py
api/type/: email.py  general.py  result.py  schema.py
api/urls/: v1.py
api/util/: async_util.py  collection_util.py  date_util.py  error_util.py  format_util.py  map_util.py  number_util.py  pwd_util.py  request_util.py  string_util.py  token_util.py
api/util/framework/: paging_util.py  pem_util.py  route_util.py  schema_util.py
api/util/framework/authorization/: auth_bearer.py  auth_rbac.py
api/util/framework/logger/: file_logger.py
api/util/framework/middleware/: cors.py
api/util/framework/model/: custom_save_mixin.py
api/util/tests/: test_utils.py
docker/: .env.default  exec  (+1 more)
(+90 files in other folders)
